changed app name

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div class="container">
         <h1>Privacy Policy</h1>
         <p><strong>Effective Date:</strong> [Insert Date]</p>
-        <p>Welcome to <strong>Smart Lock App</strong> ("we", "our", "us"). Your privacy is of utmost importance to us. This Privacy Policy explains how we handle your data. By using the app, you agree to the practices described below.</p>
+        <p>Welcome to <strong>AISafe App</strong> ("we", "our", "us"). Your privacy is of utmost importance to us. This Privacy Policy explains how we handle your data. By using the app, you agree to the practices described below.</p>
 
         <h2>1. No Data Collection</h2>
         <p>We <strong>do not collect</strong>, <strong>store</strong>, or <strong>transmit</strong> any personal or sensitive information. All operations and data remain entirely on your device.</p>
 
         <h2>2. Works 100% Offline</h2>
-        <p>Smart Lock App is designed to function entirely <strong>offline</strong>. It does <strong>not require</strong> an internet connection for any of its core functionalities. No data is sent to any server or third party.</p>
+        <p>AISafe App is designed to function entirely <strong>offline</strong>. It does <strong>not require</strong> an internet connection for any of its core functionalities. No data is sent to any server or third party.</p>
 
         <h2>3. App Lock & Fingerprint Authentication</h2>
         <p>We use Android’s <strong>BiometricPrompt API</strong> for fingerprint authentication. Fingerprint data is <strong>never accessed or stored</strong> by the app. It remains securely managed by your device’s operating system.</p>
@@ -98,7 +98,7 @@
         All data stored locally and securely<br>
         Transparent use of permissions</p>
 
-        <footer>&copy; 2025 Smart Lock App. All rights reserved.</footer>
+        <footer>&copy; 2025 AISafe App. All rights reserved.</footer>
     </div>
 </body>
 </html>
